# Voxel-modelling-GAN-VAE

./: CMakeLists(Put This Into Src Directory).txt  CMakeLists.txt  Generated_Voxels.txt  README.md  SegFault_DataSet.py  SegFault_VAE.py  SegFault_main.cpp  SegFault_train_VAE.py  main.cpp  notes.txt
dataloader/: dataloader.cpp  dataloader.h  generate_sets.cpp  make_mats.m  read_off.cpp  voxelize.cpp
final_goal_calibration/: Final Goal Calibration.pptx
gui/: CMakeLists.txt  CMakeLists_old.txt  Generated_Voxels.txt  Target_Voxels.txt  main.cpp  trial.py  wrapper  wrapper.cpp
gui/scripts/: SegFault_VAE.py  inference.py
public/: CMakeLists.txt
public/src/: CMakeLists.txt
public/src/fslazywindow/: readme_for_Android.txt
public/src/fslazywindow/samples/sample00-bouncingBall/: CMakeLists.txt  main.cpp
public/src/fslazywindow/samples/sample00-bouncingBall/iOS/sample00-bouncingBall.xcodeproj/: project.pbxproj
public/src/fslazywindow/samples/sample00-bouncingBall/iOS/sample00-bouncingBall.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
public/src/fslazywindow/samples/sample00-bouncingBall/iOS/sample00-bouncingBall/Base.lproj/: Main.storyboard
public/src/fslazywindow/src/: CMakeLists.txt
public/src/fslazywindow/src/android/: fslazywindow_android.cpp  fslazywindow_android.h  fslazywindowconnector.h
public/src/fslazywindow/src/linux_win/: fslazywindow.cpp
public/src/fslazywindow/src/macosx/: fslazywindow.cpp
public/src/fslazywindow/template/: CMakeLists.txt
public/src/fslazywindow/template_addition/android/: CMakeLists_toplevel_addition.txt  MainActivity.java_addition.txt  build.gradle_sample.txt
public/src/fslazywindow/template_addition/android/cpp/: ysgles2view.cpp
public/src/fslazywindow/template_addition/android/java/lib/ysflight/: YsAndroidConnector.java  YsAsset.java  YsFontRenderer.java  YsGLES2View.java
public/src/ysbitmapfont/cmdtools/: CMakeLists.txt
public/src/ysbitmapfont/src/: CMakeLists.txt  ysglsldrawfontbitmap.c  ysglsldrawfontbitmap.h  ysglusefontbitmap.c
